# MTA-Mini-Metro-Visualization

./: .gitignore  README.md  demo_websocket_change.py  pyproject.toml  run_server.py  start_server.sh
backend/: config.py  main.py
backend/models/: api_models.py
backend/services/: mta_data_loader.py  mta_feed_service_impl.py  websocket_service_impl.py
schemas/: mta_data.thrift
scripts/: generate_thrift.sh
tests/: manual_test.py  test_websocket_default_interval.py
