[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mta-mini-metro"
version = "1.0.0"
description = "A real-time subway visualization app inspired by Mini Metro game style, showing N, Q, R, W train lines with live MTA data"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.1",
    "websockets>=12.0",
    "protobuf>=4.25.1",
    "gtfs-realtime-bindings>=1.0.0",
    "thrift>=0.20.0",
    "numpy>=1.25.2",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mta-server = "run_server:main"

[project.urls]
Homepage = "https://github.com/your-username/mta-mini-metro"
Repository = "https://github.com/your-username/mta-mini-metro"
Issues = "https://github.com/your-username/mta-mini-metro/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | generated
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "backend/generated/",
    "__pycache__/",
]

[[tool.mypy.overrides]]
module = [
    "gtfs_realtime_bindings.*",
    "thrift.*",
    "geopy.*",
]
ignore_missing_imports = true
